# Agent

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
configs/: config.example.yaml
docs/: architecture.md  challenges.md  getting-started.md  index.md  tools.md
examples/: custom_tools.py  solve_crypto.py  solve_web.py
plugins/: subdomain_scan.py
src/agent/: __init__.py  cli.py  web.py
src/agent/categories/: __init__.py  classifier.py
src/agent/core/: __init__.py  agent.py  executor.py  memory.py  planner.py  reviewer.py
src/agent/tools/: __init__.py  crypto.py  forensics.py  pwn.py  registry.py  reverse.py  web.py
src/agent/utils/: config.py
tests/: __init__.py  test_cache.py  test_classifier.py  test_cli.py  test_config.py  test_crypto.py  test_enhanced_classifier.py  test_executor.py  test_memory.py  test_planner.py  test_reviewer.py  test_tools.py  test_web.py
tests/examples/: __init__.py
